# Marinara-Engine-Refactor-kolacheee

./: .dockerignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
docs/developer/: architecture.html  run-build.html
docs/tauri-refactor/: 00-source-inventory.md  06-migration-plan.md  15-engine-migration-checklist.md
src-tauri/: Cargo.toml
src-tauri/crates/assets/src/: lib.rs
src-tauri/crates/llm/: Cargo.toml
src-tauri/crates/llm/src/: lib.rs
src-tauri/crates/security/src/: lib.rs
src-tauri/crates/storage/: Cargo.toml
src-tauri/crates/storage/src/: lib.rs
src-tauri/resources/default-data/game-assets/: CREDITS.md
src-tauri/src/: http_dispatch.rs  http_server.rs  lib.rs  state.rs
src-tauri/src/commands/: storage.rs
src-tauri/src/commands/storage/: admin.rs  agents.rs  avatars.rs  backgrounds.rs  backup.rs  bot_browser.rs  characters.rs  chat_presets.rs  chats.rs  custom_tools.rs  encounter.rs  exports.rs  fonts.rs  game.rs  game_assets.rs  game_state_snapshots.rs  generation.rs  http.rs  images.rs  imports.rs  integrations.rs  knowledge.rs  llm.rs  lorebook_images.rs  media_uploads.rs  profile.rs  prompts.rs  router.rs  scene.rs  shared.rs  sprites.rs  translation.rs
src-tauri/src/commands/storage/commands/: entities.rs  media.rs  profile.rs
src-tauri/src/commands/storage/game/: mechanics.rs  setup.rs
src-tauri/src/commands/storage/images/: providers.rs
src-tauri/src/commands/storage/imports/: access.rs  bulk_imports.rs  marinara.rs  normalization.rs  payloads.rs  service.rs  st_preset.rs
src-tauri/src/commands/storage/integrations/: haptic.rs  spotify.rs  spotify_callback.rs  tts.rs
src-tauri/src/commands/storage/profile/: assets.rs  legacy.rs  zip_import.rs
src/app/: App.tsx
src/app/providers/: CustomThemeInjector.tsx
src/app/shell/: AppShell.tsx  ChatSidebar.tsx  useStartNewChat.ts
src/app/startup/: chat-switch-effects.ts
src/engine/capabilities/: storage.ts
src/engine/generation/: active-lorebooks.ts  agent-runner.ts  connected-commands.ts  context.ts  generate-route-utils.ts  generation-replay.ts  index.ts  (+7 more)
tests/e2e/: app.spec.ts
updates/people/: muni.md  promansis.md
(+290 files in other folders)
