[package]
name = "marinara-engine"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = [
  "crates/agents",
  "crates/assets",
  "crates/chat",
  "crates/conversation",
  "crates/core",
  "crates/game",
  "crates/generation",
  "crates/import",
  "crates/integrations",
  "crates/llm",
  "crates/roleplay",
  "crates/security",
  "crates/sidecar",
  "crates/storage",
  "crates/sync-client",
  "crates/sync-protocol",
  "crates/updates",
]

[workspace.metadata.marinara.bindings]
output_dir = "../src/shared/types/generated"
source = "Rust domain crates own Tauri boundary DTOs and export TypeScript bindings here."

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "marinara_engine_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
buttplug = "10.0.2"
buttplug_core = "10.0.2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
pdf-extract = "0.10"
png = "0.17"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
rfd = "0.15"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["sync", "time"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
marinara-core = { path = "crates/core" }
marinara-security = { path = "crates/security" }
marinara-storage = { path = "crates/storage" }
marinara-assets = { path = "crates/assets" }
marinara-import = { path = "crates/import" }
marinara-integrations = { path = "crates/integrations" }
marinara-llm = { path = "crates/llm" }
marinara-updates = { path = "crates/updates" }
